--- a/app/src/main/res/layout/fragment_recommend.xml
+++ b/app/src/main/res/layout/fragment_recommend.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:fillViewport="true"
-    android:layout_height="match_parent">
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".fragment.RecommendFragment">
 
@@ -16,8 +12,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="16dp">
+        android:paddingTop="16dp"
+        android:paddingRight="16dp">
 
         <TextView
             android:layout_width="0dp"
@@ -32,15 +28,14 @@
         android:id="@+id/etSearchItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:queryHint="Search Dish you want to cook."
+        android:layout_margin="10dp"
         app:iconifiedByDefault="false"
-        android:layout_margin="10dp"/>
+        app:queryHint="Search Dish you want to cook." />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="0dp">
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -56,68 +51,91 @@
                 android:padding="10dp"
                 android:scrollbars="vertical" />
 
-           <LinearLayout
-               android:id="@+id/llRecommendItems"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:orientation="vertical"
-               android:layout_weight="1">
-               <TextView
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:textStyle="italic|bold"
-                   android:textSize="16sp"
-                   android:layout_margin="16dp"
-                   android:text="Would you wish to prepare a dish whose ingredients will soon expire?"
-                   />
-               <TextView
-                   android:id="@+id/item_1"
-                   android:textStyle="bold"
-                   android:textAllCaps="true"
-                   android:textSize="16sp"
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:layout_margin="16dp"
-                   android:visibility="gone"
-                   android:background="@color/gray"
-                   android:padding="10dp"/>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
-               <TextView
-                   android:id="@+id/item_2"
-                   android:textStyle="bold"
-                   android:textAllCaps="true"
-                   android:textSize="16sp"
-                   android:layout_width="match_parent"
-                   android:visibility="gone"
-                   android:layout_height="wrap_content"
-                   android:layout_margin="16dp"
-                   android:background="@color/gray"
-                   android:padding="10dp"/>
+                <LinearLayout
+                    android:id="@+id/llRecommendItems"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-               <TextView
-                   android:id="@+id/item_3"
-                   android:textStyle="bold"
-                   android:textAllCaps="true"
-                   android:textSize="16sp"
-                   android:visibility="gone"
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:layout_margin="16dp"
-                   android:background="@color/gray"
-                   android:padding="10dp"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="16dp"
+                        android:text="Would you wish to prepare a dish whose ingredients will soon expire?"
+                        android:textSize="16sp"
+                        android:textStyle="italic|bold" />
 
-               <TextView
-                   android:id="@+id/item_4"
-                   android:textStyle="bold"
-                   android:textAllCaps="true"
-                   android:textSize="16sp"
-                   android:layout_width="match_parent"
-                   android:visibility="gone"
-                   android:layout_height="wrap_content"
-                   android:layout_margin="16dp"
-                   android:background="@color/gray"
-                   android:padding="10dp"/>
-           </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/item_1"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="16dp"
+                            android:layout_weight="1"
+                            android:background="@color/gray"
+                            android:padding="10dp"
+                            android:textAllCaps="true"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:visibility="gone" />
+
+                        <TextView
+                            android:id="@+id/item_2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="16dp"
+                            android:layout_weight="1"
+                            android:background="@color/gray"
+                            android:padding="10dp"
+                            android:textAllCaps="true"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:visibility="gone" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/item_3"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="16dp"
+                            android:layout_weight="1"
+                            android:background="@color/gray"
+                            android:padding="10dp"
+                            android:textAllCaps="true"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:visibility="gone" />
+
+                        <TextView
+                            android:id="@+id/item_4"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="16dp"
+                            android:layout_weight="1"
+                            android:background="@color/gray"
+                            android:padding="10dp"
+                            android:textAllCaps="true"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:visibility="gone" />
+                    </LinearLayout>
+                </LinearLayout>
+            </ScrollView>
         </LinearLayout>
 
 
@@ -152,4 +170,3 @@
 
 
 </LinearLayout>
-</ScrollView>
