Changes for generating grocery list for threshold items and bug fix for APT-77 -> adding cancel button

--- a/app/src/main/res/layout/fragment_new_food_item.xml
+++ b/app/src/main/res/layout/fragment_new_food_item.xml
@@ -139,4 +139,8 @@
         android:id="@+id/saveNewItem"
         layout="@layout/button_ui" />
 
+    <include
+        android:id="@+id/cancelNewItem"
+        layout="@layout/cancel_button_ui" />
+
 </LinearLayout>
