--- a/app/src/main/res/layout/fragment_new_food_item.xml
+++ b/app/src/main/res/layout/fragment_new_food_item.xml
@@ -135,12 +135,29 @@
         android:src="@drawable/mic_off_icon"
         app:tint="@color/white" />
 
-    <include
-        android:id="@+id/saveNewItem"
-        layout="@layout/button_ui" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/saveNewItem"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:text="Add Item"/>
 
-    <include
-        android:id="@+id/cancelNewItem"
-        layout="@layout/cancel_button_ui" />
+        <Button
+            android:id="@+id/cancelNewItem"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:text="Cancel"/>
+
+    </LinearLayout>
+
 
 </LinearLayout>
