--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -7,12 +7,12 @@
     android:orientation="horizontal"
     android:padding="10dp">
 
-    <ImageView
-        android:id="@+id/iv_item_image"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginEnd="16dp"
-        android:visibility="gone"/>
+<!--    <ImageView-->
+<!--        android:id="@+id/iv_item_image"-->
+<!--        android:layout_width="70dp"-->
+<!--        android:layout_height="70dp"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        android:visibility="gone"/>-->
     <CheckBox
         android:id="@+id/cbItemCheck"
         android:layout_width="wrap_content"
