--- a/app/src/main/res/layout/fragment_recommend.xml
+++ b/app/src/main/res/layout/fragment_recommend.xml
@@ -52,9 +52,9 @@
                 android:scrollbars="vertical" />
 
             <ScrollView
+                android:id="@+id/svRecommended"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:id="@+id/llRecommendItems"
