--- a/app/src/main/res/layout/recommend_food_item.xml
+++ b/app/src/main/res/layout/recommend_food_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_dish_item"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -12,8 +12,15 @@
         android:layout_height="wrap_content"
         android:text="Apples"
         android:padding="10dp"
+        android:layout_weight="1"
         android:textAllCaps="true"
         android:textSize="14sp"
         android:textStyle="bold"/>
+
+    <ImageView
+        android:layout_margin="8dp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:src="@drawable/right_arrow"/>
 
 </LinearLayout>
